<?xml version="1.0"?>
<package format="2">
  <name>separate_measurement_thread</name>
  <version>0.0.0</version>
  <description>The separate_measurement_thread package</description>

  <maintainer email="hamza@todo.todo">hamza</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
</package>