<?xml version="1.0"?>
<package format="2">
  <name>subscriber_wait_for_msg</name>
  <version>0.0.1</version>
  <description>The subscriber_wait_for_msg package</description>

  <maintainer email="hamzamerzic@gmail.com">Hamza Merzic</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
</package>