<?xml version="1.0"?>
<package format="2">
  <name>wait_for_msg</name>
  <version>0.0.0</version>
  <description>The wait_for_msg package</description>

  <maintainer email="hamza@todo.todo">hamza</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
</package>